--- a/src/App.css
+++ b/src/App.css
@@ -886,8 +886,8 @@ input[type="range"]::-webkit-slider-thumb {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 auto; /* Center the container */
-  padding: 0;
+  //margin: 0 auto; /* Center the container */
+  //padding: 0;
 }
 .product-counter{
  display: flex;
